--- a/Darkbet/src/angular/darkbet/src/app/app.component.html
+++ b/Darkbet/src/angular/darkbet/src/app/app.component.html
@@ -333,15 +333,15 @@
   <!-- Terminal -->
   <div>
     <ngx-wheel
-      centerText="ngx-wheel"
+      centerText="darkbet"
       [spinOnce]="spinOnce"
       fontColor="white"
       stroke="red"
       arrowColor="white"
-      [spinRange]="[10,5]"
+      [spinRange]="[10,9]"
       (beforeSpin)="beforeSpinFn(x)"
       (afterSpin)="afterSpinFn(x)"
-      prizeToWin="demo 8"
+      prizeToWin="8"
       [prize_descriptions]="prizes"
       [colors]="colors">
     </ngx-wheel>
